# threeSD

./: .gitmodules  .lgtm.yml  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  license.txt
.ci/common/: post-upload.sh  pre-upload.sh
.ci/linux-clang-format/: docker.sh
.ci/linux-fresh/: docker.sh  upload.sh
.ci/linux-mingw/: docker.sh  upload.sh
.ci/macos/: build.sh  deps.sh  upload.sh
.ci/windows-msvc/: build.sh
.github/workflows/: ci.yml
.travis/common/: post-upload.sh
.travis/linux/: build.sh  docker.sh  upload.sh
.travis/macos/: deps.sh  upload.sh
CMakeModules/: CopyQt5Deps.cmake  DownloadExternals.cmake  MSVCCache.cmake
src/: CMakeLists.txt
src/common/: CMakeLists.txt  common_funcs.h  common_paths.h  file_util.cpp  file_util.h  misc.cpp  progress_callback.cpp  progress_callback.h  scope_exit.h  thread.h
src/common/logging/: log.cpp  log.h
src/core/: CMakeLists.txt  cia_builder.cpp  cia_builder.h  data_container.cpp  data_container.h  decryptor.cpp  decryptor.h  extdata.cpp  extdata.h  file_decryptor.cpp  file_decryptor.h  importer.cpp  importer.h  inner_fat.cpp  inner_fat.h  inner_fat.hpp  quick_decryptor.cpp  quick_decryptor.h  result_status.h  savegame.cpp  savegame.h  sdmc_decryptor.cpp  sdmc_decryptor.h  title_db.cpp  title_db.h  title_keys_bin.cpp  title_keys_bin.h
src/core/db/: seed_db.cpp  seed_db.h  title_db.cpp  title_db.h  title_keys_bin.cpp  title_keys_bin.h
src/core/file_sys/: certificate.cpp  certificate.h  cia_common.h  config_savegame.cpp  config_savegame.h  ncch_container.cpp  ncch_container.h  signature.cpp  smdh.cpp  smdh.h  ticket.cpp  ticket.h  title_metadata.cpp  title_metadata.h
src/core/file_sys/data/: data_container.cpp  extdata.cpp  extdata.h  inner_fat.hpp  savegame.cpp  savegame.h
src/core/key/: arithmetic128.cpp  arithmetic128.h  key.cpp  key.h
src/core/ncch/: certificate.cpp  certificate.h  cia_builder.cpp  cia_builder.h  cia_common.h  ncch_container.cpp  ncch_container.h  seed_db.cpp  seed_db.h  signature.cpp  signature.h  smdh.cpp  smdh.h  ticket.cpp  ticket.h  title_metadata.cpp  title_metadata.h
src/frontend/: CMakeLists.txt  Info.plist  cia_build_dialog.cpp  cia_build_dialog.h  cia_build_dialog.ui  import_dialog.cpp  import_dialog.h  import_dialog.ui  import_job.cpp  import_job.h  main.cpp  main.h  main.ui  select_files_dialog.cpp  select_files_dialog.h  select_files_dialog.ui  select_nand_dialog.cpp  select_nand_dialog.h  select_nand_dialog.ui  title_info_dialog.cpp  title_info_dialog.h  title_info_dialog.ui  utilities.cpp  utilities.h  utilities.ui
src/frontend/helpers/: dpi_aware_dialog.cpp  dpi_aware_dialog.h  frontend_common.cpp  frontend_common.h  import_job.cpp  import_job.h  multi_job.cpp  multi_job.h  progressive_job.cpp  progressive_job.h  rate_limited_progress_dialog.cpp  rate_limited_progress_dialog.h  simple_job.cpp  simple_job.h
