add_library(core STATIC
  cia_builder.cpp
  cia_builder.h
  db/seed_db.cpp
  db/seed_db.h
  db/title_db.cpp
  db/title_db.h
  db/title_keys_bin.cpp
  db/title_keys_bin.h
  file_decryptor.cpp
  file_decryptor.h
  file_sys/certificate.cpp
  file_sys/certificate.h
  file_sys/cia_common.h
  file_sys/config_savegame.cpp
  file_sys/config_savegame.h
  file_sys/data/data_container.cpp
  file_sys/data/data_container.h
  file_sys/data/extdata.cpp
  file_sys/data/extdata.h
  file_sys/data/inner_fat.hpp
  file_sys/data/savegame.cpp
  file_sys/data/savegame.h
  file_sys/ncch_container.cpp
  file_sys/ncch_container.h
  file_sys/signature.cpp
  file_sys/signature.h
  file_sys/smdh.cpp
  file_sys/smdh.h
  file_sys/ticket.cpp
  file_sys/ticket.h
  file_sys/title_metadata.cpp
  file_sys/title_metadata.h
  importer.cpp
  importer.h
  key/arithmetic128.cpp
  key/arithmetic128.h
  key/key.cpp
  key/key.h
  sdmc_decryptor.cpp
  sdmc_decryptor.h
)

target_link_libraries(core PRIVATE common cryptopp)
